structmeta-tests/tests/compile_fail/to_tokens/not_impl_to_tokens.rs
use structmeta::ToTokens;
#[derive(ToTokens)]
struct TestType {
    x: X,
}

struct X;

fn main() {}
